<resources>
    <string name="app_name">IF26_TP6</string>

    <string name="action_settings">Settings</string>
    <string name="delete_module">Supprimer un module</string>
    <string name="ajouter_module">Ajouter Module</string>
    <string name="sigle">Sigle</string>
    <string name="categorie">Categorie</string>
    <string name="parcours">Parcours</string>
    <string name="credit">Credits</string>

    <string name="envoyer">Envoyer</string>

    <string name="drawer_open">Ouvrir</string>
    <string name="drawer_close">Fermer</string>
    <string name="Title">title</string>
    <string name="supprimer">Supprimer</string>
    <string name="module">Module</string>
    <string name="modifier">Modifier</string>
    <string name="quitter">quitter</string>
    <string name="valider">Valider</string>
    <string name="main_title">Liste Modules</string>
    <string name="bd_list_module">BD liste module</string>
    <string name="bd_add_module">BD add module</string>
    <string name="list_module">liste module</string>
    <string name="list_sigle">liste module</string>
    <string name="add_module">ajouter module</string>
</resources>
