<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2">

        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:gravity="center_vertical"
            android:text="@string/module"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/amm_sigle"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:gravity="center_vertical"
            android:text="@string/categorie"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/amm_categorie"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:gravity="center_vertical"
            android:text="@string/parcours"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/amm_parcours"
            android:layout_width="112dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginBottom="30dp"
            android:gravity="center_vertical"
            android:text="@string/credit"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/amm_credit"
            android:layout_width="109dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textColorLink="@android:color/background_light" />

    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/amm_valider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:text="@string/valider" />

        <Button
            android:id="@+id/amm_quitter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_weight="1"
            android:text="@string/quitter" />
    </LinearLayout>

</LinearLayout>